--- a/packages/dmn-editor/src/DmnEditor.css
+++ b/packages/dmn-editor/src/DmnEditor.css
@@ -216,6 +216,14 @@
   line-height: 21px;
   pointer-events: all;
 }
+.kie-dmn-editor--decision-service-node .button-inactive {
+  pointer-events: none !important;
+  opacity: 0.4;
+}
+.kie-dmn-editor--decision-service-node .button-inactive {
+  pointer-events: none !important;
+  opacity: 0.4;
+}
 .react-flow__node-node_decisionService.selected .kie-dmn-editor--decision-service-expanded-button {
   border-color: #006ba4 !important;
 }
@@ -225,7 +233,6 @@
   border-color: black;
   font-weight: bold;
   position: absolute;
-  right: calc(100% + 4px);
   width: 24px;
   height: 25px;
   font-size: 24px;
