--- a/packages/unitables-dmn/src/DmnRunnerOutputsTable.css
+++ b/packages/unitables-dmn/src/DmnRunnerOutputsTable.css
@@ -22,17 +22,16 @@
   background-color: #bee1f4;
 }
 
-/* td .runner-column-highlight {
+.expression-container .table-component table thead th.runner-column-highlight,
+.expression-container .table-component table tbody td.runner-column-highlight {
   border-left: var(--pf-global--BorderWidth--md) solid var(--pf-global--BorderColor--200);
   border-right: var(--pf-global--BorderWidth--md) solid var(--pf-global--BorderColor--200);
 }
 
-thead tr:nth-child(2) .runner-column-highlight {
+.expression-container .table-component table thead tr:last-child th.runner-column-highlight {
   border-top: var(--pf-global--BorderWidth--md) solid var(--pf-global--BorderColor--200);
-  border-left: var(--pf-global--BorderWidth--md) solid var(--pf-global--BorderColor--200);
-  border-right: var(--pf-global--BorderWidth--md) solid var(--pf-global--BorderColor--200);
 }
 
-tbody tr:last-child .runner-column-highlight {
+.expression-container .table-component table tbody tr:last-child td.runner-column-highlight {
   border-bottom: var(--pf-global--BorderWidth--md) solid var(--pf-global--BorderColor--200);
-} */
+}
