--- a/packages/online-editor/static/resources/style.css
+++ b/packages/online-editor/static/resources/style.css
@@ -107,7 +107,6 @@
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
   overflow: hidden;
 }
 
@@ -189,6 +188,8 @@
   border: var(--pf-v5-global--BorderWidth--md) solid var(--pf-v5-global--BorderColor--200);
   font-size: var(--pf-v5-global--FontSize--md);
   text-align: center;
+  display: flex;
+  align-items: center;
 }
 
 .kogito--editor__toolbar-subtitle:focus {
@@ -203,7 +204,7 @@
 }
 
 .kogito--editor__toolbar-subtitle:hover {
-  border: var(--pf-v5-global--BorderWidth--md) solid var(--pf-v5-global--BorderColor--200);
+  border: 1px solid var(--pf-v5-global--BorderColor--200);
   border-radius: var(--pf-v5-global--BorderRadius--sm);
   padding: var(--pf-v5-global--spacer--xs);
 }
@@ -225,7 +226,7 @@
 }
 
 .kogito--editor__toolbar-title:hover {
-  border: var(--pf-v5-global--BorderWidth--md) solid var(--pf-v5-global--BorderColor--200);
+  border: 1px solid var(--pf-v5-global--BorderColor--200);
   border-radius: var(--pf-v5-global--BorderRadius--sm);
   padding: var(--pf-v5-global--spacer--xs);
 }
@@ -321,6 +322,13 @@
   justify-content: space-between;
   align-items: center;
   height: 60px;
+}
+
+.kogito--editor__dmn-runner-content-header div,
+.kogito--editor__dmn-runner-content-header h3 {
+  flex-wrap: nowrap;
+  display: flex;
+  align-items: center;
 }
 
 .kogito--editor__dmn-runner-drawer-content-body {
@@ -738,6 +746,11 @@ section.kie-tools--settings-tab {
 
 /* GitStatusIndicator, GitStatusIndicatorActions */
 /* GitStatusIndicatorActions hoverable */
+.kie-tools--git-status-indicator {
+  display: flex;
+  padding-left: 16px;
+}
+
 .kie-tools--git-status-indicator-children-hoverable {
   visibility: hidden;
 }
