BPMN Editor: Lane label element is getting in the way of selecting elements contained by the Lane & Containment visual cues not showing up for Boundary Events, Sub-processes, and Lanes  (#143)

--- a/packages/xyflow-react-kie-diagram/src/nodes/EditableNodeLabel.css
+++ b/packages/xyflow-react-kie-diagram/src/nodes/EditableNodeLabel.css
@@ -51,6 +51,9 @@
   writing-mode: vertical-rl;
   transform: rotate(180deg);
 }
+.xyflow-react-kie-diagram--editable-node-name-input.center-left-vertical span {
+  width: fit-content;
+}
 .xyflow-react-kie-diagram--editable-node-name-input.top-center input,
 .xyflow-react-kie-diagram--editable-node-name-input.center-bottom input,
 .xyflow-react-kie-diagram--editable-node-name-input.center-center input {
