--- a/packages/boxed-expression-component/src/expressions/FunctionExpression/JavaFunctionExpression.css
+++ b/packages/boxed-expression-component/src/expressions/FunctionExpression/JavaFunctionExpression.css
@@ -46,8 +46,8 @@
 }
 
 .java-function-expression-label .java-function-parameter-help-icon {
-  bottom: 10px;
-  right: 10px;
+  bottom: 8px;
+  left: 2px;
   color: var(--pf-v5-global--info-color--100);
   cursor: pointer;
   position: absolute;
