--- a/packages/kogito-jobs-service-webapp/src/styles.css
+++ b/packages/kogito-jobs-service-webapp/src/styles.css
@@ -81,6 +81,10 @@ p {
   justify-content: space-around;
 }
 
+.versionInfo {
+  color: #1f1e1e;
+}
+
 @media (prefers-color-scheme: dark) {
   .maindiv,
   .container {
@@ -90,5 +94,9 @@ p {
   h4,
   p {
     color: #fefefe;
+  }
+
+  .versionInfo {
+    color: #fff;
   }
 }
